# audio-spectrum-live

./: .gitignore  Cargo.toml  FILTER_PRESETS.md  LICENSE  README.md  build.ps1  pyproject.toml
python/spectral_gui/: __init__.py  main.py
python/spectral_gui/controllers/: __init__.py  dsp_controller.py
python/spectral_gui/ui/: filter_panel.py  main_window.py  spectrum_plot.py  waveform_plot.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/audio/: buffer.rs  gate.rs  input.rs  mod.rs  output.rs  processor.rs
rust-core/src/filters/: design.rs  fast_fir.rs  fir.rs  mod.rs  windows.rs
rust-core/src/python_bindings/: audio_bindings.rs  filter_bindings.rs  mod.rs  processor_bindings.rs  spectrum_bindings.rs
rust-core/src/spectrum/: analysis.rs  fft.rs  mod.rs  windowing.rs
