[workspace]
members = ["rust-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anastasios Chatzigiannakis"]

[workspace.dependencies]
# Audio I/O
cpal = "0.15"

# DSP and FFT
rustfft = "6.2"
realfft = "3.3"
ndarray = "0.15"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Utilities
num-complex = "0.4"
ringbuf = "0.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
